--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "tmi.js": "^1.8.5"
+    "tmi.js": "^1.8.5",
+    "usehooks-ts": "^2.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
